--- a/Canny Edge Detector_190023G.ipynb
+++ b/Canny Edge Detector_190023G.ipynb
@@ -371,7 +371,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Additional function to trace and connect weak edges"
+    "### Additional function to trace and connect weak edges"
    ]
   },
   {
